livefire-routed-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: livefire-routed
   annotations:
      ncp/no_snat: "true"
