livefire-demo-dly-v1.1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: livefire-demo-dly
spec:
  replicas: 5
  selector:
    matchLabels:
      app: livefire-demo
  template:
    metadata:
      labels:
        app: livefire-demo
        secgroup: web-tier
        version: v1.1
    spec:
      containers:
      - name: livefire-demo
        image:  livefire-pod:v3
        ports:
        - containerPort: 443
