livefire-type-lb-snat.yaml
apiVersion: v1
kind: Service
metadata:
  name: livefire-svc-snat
  labels:
    app: livefire-svc-snat
  annotations:
    ncp/snat_pool: svc-snat-pool
spec:
  clusterIP: "None"
  ports:
  - port: 80
    targetPort: 81
    protocol: TCP
  selector:
    tier: web-tier
